--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -1,22 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.gallery.GalleryFragment">
+   android:padding="10dp"
+    android:background="@drawable/background_1"
+    tools:context=".ui.about.GalleryFragment">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+   android:paddingBottom="50dp"
+    >
+
 
     <TextView
-        android:id="@+id/text_gallery"
+        android:id="@+id/tv_about1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="100dp"
+
+
+        android:layout_marginRight="60dp"
+        android:text="نحن فريق نُضج وهذا مشروع تخرج الدفعة الثانية من قسم تكنولوجيا التعليم في كلية التربية النوعية فرع ميت غمر التابعة لجامعة المنصورة . "
         android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_about2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:layout_marginRight="80dp"
+        android:text="	هدفنا من التطبيق هو مساعدة العديد من الأطفال ذوي الاحتياجات الخاصة ، بما في ذلك الأطفال المصابين بالتوحد، وفرط الحركة ، وصعوبات التعلم ، لتحسين حالتهم الحالية ."
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_about1" />
+
+    <TextView
+        android:id="@+id/tv_about3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="80dp"
+        android:text="بالإضافة إلى ذلك ، نسعى أيضًا لتوعية أولياء الأمور بشكل خاص والمجتمع بشكل عام حول كيفية التعامل مع هؤلاء الأطفال \n هدفنا الأول هو تقديم تطبيق يوفر الدعم والموارد التعليمية والترفيهية المناسبة لهؤلاء الأطفال، مما يساعدهم على تحسين مهاراتهم وزيادة استقلاليتهم في الحياة اليومية ."
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_about2" />
+
+
+<TextView
+        android:id="@+id/tv_about4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="80dp"
+        android:text="علاوة على ذلك ، نسعى إلى توفير أدوات تقييم وتتبع لتقدم الطفل ، بالإضافة إلى مميزات تفاعلية تعزز التعلم والانخراط . "
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_about3" />
+
+
+
+
+<TextView
+        android:id="@+id/tv_about5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="80dp"
+       android:text="	أما بالنسبة للهدف الثاني ، فنحن نسعى إلى توعية الجمهور بشكل عام بأهمية فهم ودعم الأطفال ذوي الاحتياجات الخاصة . نهدف إلى تقديم معلومات ونصائح عملية لأولياء الأمور والمجتمع بشكل عام حول كيفية التعامل مع هذه الفئة من الأطفال بفعالية واحترام ، مما يسهم في تعزيز التفاهم والتسامح في المجتمع وتحسين جودة حياتهم وتجربتهم التعليمية "
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="200dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_about4" />
+
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
