--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -51,10 +51,10 @@
                     android:layout_width="110dp"
                     android:layout_height="120dp"
 
-                    android:layout_marginStart="16dp"
+                    android:layout_marginLeft="16dp"
                     android:layout_marginTop="40dp"
                     android:src="@drawable/img_autism"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/info_autism" />
 
                 <TextView
@@ -67,11 +67,9 @@
                      android:textColor="#070707"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toTopOf="@+id/btn_1"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.809"
-                    app:layout_constraintStart_toEndOf="@+id/imageView2"
-                    app:layout_constraintTop_toBottomOf="@+id/info_autism"
-                    app:layout_constraintVertical_bias="0.0" />
+                    app:layout_constraintRight_toRightOf="parent"
+                     app:layout_constraintTop_toBottomOf="@+id/info_autism"
+                     />
 
                 <Button
                     android:id="@+id/btn_1"
@@ -138,7 +136,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="52dp"
                     android:src="@drawable/img_adhd"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/info_ADHD" />
 
                 <TextView
@@ -152,9 +150,8 @@
                     android:textSize="20sp"
 
                     app:layout_constraintBottom_toTopOf="@+id/btn_2"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
 
-                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                     app:layout_constraintTop_toBottomOf="@+id/info_ADHD" />
 
                 <Button
@@ -184,10 +181,11 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/card3"
             android:layout_width="match_parent"
-            android:layout_height="350dp"
+            android:layout_height="300dp"
             android:layout_margin="15dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/card2">
@@ -222,29 +220,28 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="12dp"
                     android:src="@drawable/img_learn_diff"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/info_learing" />
 
                 <TextView
                     android:id="@+id/textView1"
                     android:layout_width="190dp"
-                    android:layout_height="83dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-               android:text="هي مشاكل تواجهها بعض الأفراد في فهم واستيعاب المعرفة وتطبيقها بطريقة فعالة."
-                    android:layout_marginEnd="8dp"
                     android:gravity="center"
+                    android:text="هي مشاكل تواجهها بعض الأفراد في فهم واستيعاب المعرفة وتطبيقها بطريقة فعالة."
                     android:textColor="#070707"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toTopOf="@+id/btn_3"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/imageView4"
+                    app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/info_learing" />
 
                 <Button
                     android:id="@+id/btn_3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="30dp"
                     android:backgroundTint="@color/purple_200"
                     android:text="ابدأ"
                     android:textSize="30sp"
