--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/background_1"
     android:layout_height="match_parent"
     tools:context=".ui.slideshow.SlideshowFragment">
 
@@ -11,12 +12,50 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="40sp"
+        android:text="تواصل معنا "
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <Button
+        android:id="@+id/textGoToMail"
+        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="208dp"
+        android:text="اضغط للذهاب الى الاميل"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:drawableLeft="@drawable/iconsmail0"
+        app:iconSize="45sp"
+        app:iconTint="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_slideshow" />
+
+    <Button
+        android:id="@+id/textGoToFace"
+        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+        android:layout_width="290dp"
+        android:layout_height="72dp"
+        android:layout_marginTop="44dp"
+        android:text="اضغط للذهاب الى الفيس بوك "
+        android:textColor="@color/black"
+        android:textSize="18sp"
+
+        android:drawableLeft="@drawable/icons8facebook0"
+        app:iconSize="30sp"
+        app:iconTint="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textGoToMail" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
