--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -7,33 +7,34 @@
     android:layout_height="match_parent"
     tools:context=".ui.slideshow.SlideshowFragment">
 
+
     <TextView
         android:id="@+id/text_slideshow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="104dp"
         android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="40sp"
         android:text="تواصل معنا "
-        android:textColor="@color/black"
+        android:textAlignment="center"
+        android:textColor="@color/purple_200"
+        android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <Button
         android:id="@+id/textGoToMail"
         style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="208dp"
+        android:layout_marginTop="136dp"
+        android:drawableLeft="@drawable/iconsmail0"
         android:text="اضغط للذهاب الى الاميل"
         android:textColor="@color/black"
         android:textSize="18sp"
-        android:drawableLeft="@drawable/iconsmail0"
         app:iconSize="45sp"
         app:iconTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
