--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -7,11 +7,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
    android:padding="10dp"
+
     android:background="@drawable/background_1"
     tools:context=".ui.about.GalleryFragment">
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="50dp"
    android:paddingBottom="50dp"
     >
 
